z-index fix

--- a/source/blocks/header/header.sass
+++ b/source/blocks/header/header.sass
@@ -8,6 +8,7 @@
   align-items: center
   justify-content: space-between
   transition: 0.2s cubic-bezier(0.165, 0.84, 0.44, 1)
+  z-index: 1
   @media (max-width: 568px)
     height: 60px
   
